--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 
 body{font-family: "proxima-nova", sans-serif ;
 background-color: #eef3f4;
-height: 100%;}
+height: 100%;
+}
 
 /* --header - Logo and login section Starts-- */
 .box-container{box-sizing: border-box 600px;
@@ -39,12 +40,26 @@ font-style: normal;
    
     display: flex;
     align-items: center;
-    padding: 4px 0;
+    
+   
    
 }
-.header-text{
+.main-text{
 justify-content: flex-start
 ;
 }
+.hero-icon-style{
+    
+background-color: #eef3f4;
+border-radius: 50% ;
+display: flex ;
+width: 469px;
+height: 469px;
+align-items: center;
+margin-top: 20px;
+
+}
+
+
 
 /* --First Container Ends-- */
