--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body{
     font-family: "proxima-nova", sans-serif ;
     background-color: #eef3f4;
-    height: 200vh;
+    height: 100vh;
 }
 
 /* --header - Logo and login section Starts-- */
@@ -65,6 +65,7 @@ align-items: center;
 margin-top: 20px;
 }
 .first-container-button{
+ 
     background-color: transparent;
     color: #87c241;
     border-style: bold;
@@ -81,5 +82,8 @@ margin-top: 20px;
     background-color: #87c241;
     color: #ffffff;
     transition: 0.5s all ease-out;
+}
+.popup{
+    
 }
 /* --First Container Ends-- */
