--- a/style.css
+++ b/style.css
@@ -45,10 +45,22 @@ body{
     background-color: azure;
     border-radius: 40px;
     position: relative;
+    gap: 10px
+    ;
   
 }
 
+.list-items{
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
 
+}
+.list-text{text-decoration: none;}
+.pop-login-modal{
+    
+}
 /* --header - Logo and login section Ends-- */
 /* --First Container Starts-- */
 
