--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     margin: auto ;
    display: flex;
    flex-direction: column;
-   
+  
 }
 
 
@@ -157,13 +157,30 @@ margin-top: 20px;
 /* --main box starts */
 
 .main-container{
+    
     display: flex;
     flex-direction: row;
    
+   justify-content: center;
+   gap: 70px;
+   
 }
-
-
-.main-list-style{
-    list-style: none;
+.main-box{
     
-}
+    
+    border: 1px solid grey;
+    box-sizing: border-box 600px,;
+    background-color: #eef3f4;
+    margin: 80px;
+    padding: 40px;
+    
+    }
+.main-list-style{
+    list-style: none; 
+    font-family:"proxima-nova", sans-serif; 
+    font-size: 14px;
+    font-weight: bold;
+    box-sizing: border-box 120px;
+    background-color: #ffffff;
+    border-radius: 25px;
+   box-shadow: 0cap;
